Refs #METH-410 ~ config for each Divia model updated.

--- a/METH-363_Divia_3_paves/config.yml
+++ b/METH-363_Divia_3_paves/config.yml
@@ -1,4 +1,4 @@
-label: Divia 3 pavés
+label: Divia 3 paves 06jan15
 templateName: divia_3_paves.html.twig
 previewFileName: fond 3 pave.jpg
 orientation: 0
