--- a/METH-364_Divia_Flexo_1_pave/config.yml
+++ b/METH-364_Divia_Flexo_1_pave/config.yml
@@ -1,4 +1,4 @@
-label: Divia Flexo 1 pavé
+label: Divia 1 pave Flexo 06jan15
 templateName: flexo.html.twig
 previewFileName: preview.jpg
 orientation: 0
