--- a/METH-365_Divia_3_paves_proxi/config.yml
+++ b/METH-365_Divia_3_paves_proxi/config.yml
@@ -1,4 +1,4 @@
-label: Divia 3 pavés proxi
+label: Divia 3 paves Proxi 06jan15
 templateName: divia_3_paves_proxi.html.twig
 previewFileName: preview.jpg
 orientation: 0
