--- a/METH-337_Divia_4_paves/config.yml
+++ b/METH-337_Divia_4_paves/config.yml
@@ -1,4 +1,4 @@
-label: Divia 4 paves 06jan15
+label: Divia 4 paves 05mars15
 templateName: divia_1.html.twig
 previewFileName: divia_1.png
 orientation: 0
