--- a/METH-363_Divia_3_paves/config.yml
+++ b/METH-363_Divia_3_paves/config.yml
@@ -1,4 +1,4 @@
-label: Divia 3 paves 06jan15
+label: Divia 3 paves 05mars15
 templateName: divia_3_paves.html.twig
 previewFileName: fond 3 pave.jpg
 orientation: 0
