--- a/Divia/Divia_Flexo_1_pave/config.yml
+++ b/Divia/Divia_Flexo_1_pave/config.yml
@@ -1,4 +1,4 @@
-label: Divia 1 pave Flexo 05mars15
+label: Divia 1 pave Flexo juillet2015
 templateName: flexo.html.twig
 previewFileName: preview.jpg
 orientation: 0
