--- a/Divia/Divia_3_paves/config.yml
+++ b/Divia/Divia_3_paves/config.yml
@@ -1,4 +1,4 @@
-label: Divia 3 paves 05mars15
+label: Divia 3 paves juillet15
 templateName: divia_3_paves.html.twig
 previewFileName: fond 3 pave.jpg
 orientation: 0
