--- a/Setram/Setram_gabarit_hiver/config.yml
+++ b/Setram/Setram_gabarit_hiver/config.yml
@@ -1,5 +1,4 @@
-label: Setram Gabarit Hiver
+label: Setram Gabarit Hiver Juillet15
 templateName: setram_gabarit_hiver.html.twig
 previewFileName: fond_GabaritHiver.jpg
 orientation: 1
-version: 20150619
