--- a/Setram/Setram_gabarit_scolaire/config.yml
+++ b/Setram/Setram_gabarit_scolaire/config.yml
@@ -1,5 +1,4 @@
-label: Setram Gabarit Scolaire
+label: Setram Gabarit Scolaire Juillet15
 templateName: setram_gabarit_scolaire.html.twig
 previewFileName: fond_GabaritScolaire.jpg
 orientation: 1
-version: 20150619
