--- a/Divia/Divia_Flexo_1_pave/config.yml
+++ b/Divia/Divia_Flexo_1_pave/config.yml
@@ -1,4 +1,4 @@
-label: Divia 1 pave Flexo juillet15
+label: Divia 1 pave Flexo 21Juillet2015
 templateName: flexo.html.twig
 previewFileName: preview.jpg
 orientation: 0
