--- a/Divia/Divia_3_paves_proxi/config.yml
+++ b/Divia/Divia_3_paves_proxi/config.yml
@@ -1,4 +1,4 @@
-label: Divia 3 paves Proxi juillet15
+label: Divia 3 paves Proxi 21Juillet2015
 templateName: divia_3_paves_proxi.html.twig
 previewFileName: preview.jpg
 orientation: 0
