--- a/Divia/Divia_4_paves/config.yml
+++ b/Divia/Divia_4_paves/config.yml
@@ -1,4 +1,4 @@
-label: Divia 4 paves 05mars15
+label: Divia 4 paves 21Juillet2015
 templateName: divia_1.html.twig
 previewFileName: divia_1.png
 orientation: 0
