--- a/Setram/Setram_gabarit_tram/config.yml
+++ b/Setram/Setram_gabarit_tram/config.yml
@@ -1,4 +1,4 @@
-label: Setram Gabarit Eté Tram Juillet15
+label: Setram Gabarit Eté Tram 28Juillet15
 templateName: setram_gabarit_ete_tram.html.twig
 previewFileName: fond_GabaritEteTram.jpg
 orientation: 1
