--- a/Setram/Setram_gabarit_scolaire/config.yml
+++ b/Setram/Setram_gabarit_scolaire/config.yml
@@ -1,4 +1,4 @@
-label: Setram Gabarit Scolaire Juillet15
+label: Setram Gabarit Scolaire 28Juillet15
 templateName: setram_gabarit_scolaire.html.twig
 previewFileName: fond_GabaritScolaire.jpg
 orientation: 1
