--- a/Setram/Setram_gabarit_hiver/config.yml
+++ b/Setram/Setram_gabarit_hiver/config.yml
@@ -1,4 +1,4 @@
-label: Setram Gabarit Hiver Juillet15
+label: Setram Gabarit Hiver 28Juillet15
 templateName: setram_gabarit_hiver.html.twig
 previewFileName: fond_GabaritHiver.jpg
 orientation: 1
