--- a/Setram/Setram_gabarit_ete_bus/config.yml
+++ b/Setram/Setram_gabarit_ete_bus/config.yml
@@ -1,4 +1,4 @@
-label: Setram Gabarit Ete Bus Juillet15
+label: Setram Gabarit Ete Bus 28Juillet15
 templateName: setram_gabarit_ete_bus.html.twig
 previewFileName: fond_GabaritEteBus.jpg
 orientation: 1
