fixed previous commit

--- a/Divia/Divia_3_paves_proxi/config.yml
+++ b/Divia/Divia_3_paves_proxi/config.yml
@@ -1,6 +1,6 @@
 layout:
     label: Divia 3 paves Proxi 27Novembre2015
-    previewFileName: fond 3 pave.jpg
+    previewFileName: preview.jpg
     orientation: 0
 
 templates:
