--- a/Setram/Setram_gabarit_ete_bus/config.yml
+++ b/Setram/Setram_gabarit_ete_bus/config.yml
@@ -1,4 +1,8 @@
-label: Setram Gabarit Ete Bus 31Juillet15
-templateName: setram_gabarit_ete_bus.html.twig
-previewFileName: fond_GabaritEteBus.jpg
-orientation: 1
+layout:
+    label: Setram Gabarit Ete Bus 31Juillet15
+    previewFileName: fond_GabaritEteBus.jpg
+    orientation: 1
+
+templates:
+    stop:
+        file: setram_gabarit_ete_bus.html.twig
