--- a/Setram/Setram_gabarit_hiver/config.yml
+++ b/Setram/Setram_gabarit_hiver/config.yml
@@ -1,4 +1,8 @@
-label: Setram Gabarit Hiver 31Juillet15
-templateName: setram_gabarit_hiver.html.twig
-previewFileName: fond_GabaritHiver.jpg
-orientation: 1
+layout:
+    label: Setram Gabarit Hiver 31Juillet15
+    previewFileName: fond_GabaritHiver.jpg
+    orientation: 1
+
+templates:
+    stop:
+        file: setram_gabarit_hiver.html.twig
