--- a/Setram/Setram_gabarit_scolaire/config.yml
+++ b/Setram/Setram_gabarit_scolaire/config.yml
@@ -1,4 +1,8 @@
-label: Setram Gabarit Scolaire 31Juillet15
-templateName: setram_gabarit_scolaire.html.twig
-previewFileName: fond_GabaritScolaire.jpg
-orientation: 1
+layout:
+    label: Setram Gabarit Scolaire 31Juillet15
+    previewFileName: fond_GabaritScolaire.jpg
+    orientation: 1
+
+templates:
+    stop:
+        file: setram_gabarit_scolaire.html.twig
