--- a/Divia/Divia_4_paves_citron_anis/config.yml
+++ b/Divia/Divia_4_paves_citron_anis/config.yml
@@ -1,4 +1,4 @@
 label: Divia 4 paves Citron Anis 01Décembre2015
 templateName: divia_4_paves_citron_anis.html.twig
-previewFileName: divia_4_paves_citron_anis.png
+previewFileName: divia_4_paves_citron_anis.jpg
 orientation: 0
