--- a/Divia/Divia_3_paves_citron_anis/config.yml
+++ b/Divia/Divia_3_paves_citron_anis/config.yml
@@ -1,4 +1,4 @@
 label: Divia 3 paves citron anis 01Décembre2015
 templateName: divia_3_paves_citron_anis.html.twig
-previewFileName: fond 3 pave citron anis.jpg
+previewFileName: divia_3_paves_citron_anis.jpg
 orientation: 0
